# ChessGamePlayer3D

./: .gitignore  CMakeLists.txt  Makefile  README.md  asteroid-3d.filters  asteroid-3d.sln  asteroid-3d.vcxproj  bio_szkielet_01_win.sln  bio_szkielet_01_win.vcxproj  bio_szkielet_05_win.sln  bio_szkielet_05_win.vcxproj  camera.cpp  camera.h  main_file.cpp
resources/: game.txt  hourse.mtl  king.mtl  queen.mtl  runner.mtl
shaders/lambert/: v_lambert.glsl
src/: constants.h  main_file.cpp
src/chessboard/: chessboard.cpp  chessboard.h
src/chessmove/: chessmove.cpp  chessmove.h
src/colored_model/: colored_model.cpp  colored_model.h
src/cube/: cube.cpp  cube.h
src/figure/: figure.cpp  figure.h
src/game/: game.cpp  game.h
src/lodepng/: lodepng.cpp  lodepng.h
src/model/: model.h
src/obj_reader/: obj_reader.cpp  obj_reader.h
src/obj_reader/mesh/: mesh.cpp  mesh.h
src/program_state/: program_state.cpp  program_state.h
src/rotate_controller/: rotate_controller.cpp  rotate_controller.h
src/shaderprogram/: shaderprogram.cpp  shaderprogram.h
src/shaders/colored/: f_colored.glsl  v_colored.glsl
src/shaders/lambert/: f_lambert.glsl  v_lambert.glsl
src/shaders/textured/: f_textured.glsl  v_textured.glsl
src/shaders_container/: shaders_container.cpp  shaders_container.h  shaders_type.h
src/spacegenerator/: spacegenerator.cpp  spacegenerator.h
src/structurs/: texture.h  vertex.h
src/texture/: texture.cpp  texture.h
src/texture_container/: texture_container.cpp  texture_container.h
src/vec4_to_array/: vec4_to_array.cpp  vec4_to_array.h
x64/Debug/: bio_szkielet_05_win.exe.recipe  bio_szkielet_05_win.vcxproj.FileListAbsolute.txt  vc143.idb
(+9 files in other folders)
